    would cause a version check to occur.  Since the instance
    is first expired, refresh() always upgrades the object
    to the most recent version.
    
  - The 'refresh-expire' cascade, when reaching a pending object,
    will expunge the object if the cascade also includes
    "delete-orphan", or will simply detach it otherwise.
    [ticket:1754]

- ext
   - the compiler extension now allows @compiles decorators
     on base classes that extend to child classes, @compiles
     decorators on child classes that aren't broken by a 
     @compiles decorator on the base class.
   
0.6beta3
========

- orm
  - Major feature: Added new "subquery" loading capability to 
    relationship().   This is an eager loading option which
    generates a second SELECT for each collection represented
    in a query, across all parents at once.  The query 
    re-issues the original end-user query wrapped in a subquery,
    applies joins out to the target collection, and loads 
    all those collections fully in one result, similar to 
    "joined" eager loading but using all inner joins and not 
    re-fetching full parent rows repeatedly (as most DBAPIs seem 
    to do, even if columns are skipped).   Subquery loading is 
    available at mapper config level using "lazy='subquery'" and 
    at the query options level using "subqueryload(props..)", 
    "subqueryload_all(props...)".  [ticket:1675]

  - To accomodate the fact that there are now two kinds of eager 
    loading available, the new names for eagerload() and 
    eagerload_all() are joinedload() and joinedload_all().  The 
    old names will remain as synonyms for the foreseeable future.
    
  - The "lazy" flag on the relationship() function now accepts 
    a string argument for all kinds of loading: "select", "joined",
    "subquery", "noload" and "dynamic", where the default is now
    "select".  The old values of True/
    False/None still retain their usual meanings and will remain